--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 # Build and Release Folders
-bin-debug/
-bin-release/
-[Oo]bj/
-[Bb]in/
+
 
 # Other files and folders
-.settings/
+node_modules/
+yarn.lock
+package-lock.json
 
 # Executables
 *.swf
