--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,10 @@ node_modules/
 yarn.lock
 package-lock.json
 dist/
+.env
 
 # Executables
-*.swf
-*.air
-*.ipa
-*.apk
+*.env
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
